menambahkan pitur skill

--- a/home.html
+++ b/home.html
@@ -15,6 +15,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
+
     <!-- my css-->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -60,6 +67,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link text-primary" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-primary" href="#skill">skill</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-primary" href="#contact">contact</a>
@@ -258,13 +268,72 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#ffffff"
+          fill="#273036"
           fill-opacity="1"
-          d="M0,128L48,149.3C96,171,192,213,288,213.3C384,213,480,171,576,133.3C672,96,768,64,864,96C960,128,1056,224,1152,224C1248,224,1344,128,1392,80L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+          d="M0,128L48,144C96,160,192,192,288,170.7C384,149,480,75,576,85.3C672,96,768,192,864,208C960,224,1056,160,1152,128C1248,96,1344,96,1392,96L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
         ></path>
       </svg>
     </section>
     <!--  akhir cart-->
+    <!-- skill -->
+    <section id="skill">
+      <div class="container mb-5 pb-5">
+        <div class="row text-center mb-5">
+          <div class="col">
+            <h2 class="text-white fw-bold">skill</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col d-flex justify-content-center">
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-html5-plain-wordmark colored fs-1"></i>
+            </span>
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-css3-plain-wordmark colored fs-1"></i>
+            </span>
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-bootstrap-plain-wordmark colored fs-1"></i>
+            </span>
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-mysql-plain-wordmark colored fs-1"></i>
+            </span>
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-canva-original colored fs-1"></i>
+            </span>
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-tailwindcss-plain-wordmark colored fs-1"></i>
+            </span>
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-figma-plain colored fs-1"></i>
+            </span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col d-flex justify-content-center">
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-php-plain colored fs-1"></i>
+            </span>
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-laravel-original-wordmark colored fs-1"></i>
+            </span>
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-react-original-wordmark colored fs-1"></i>
+            </span>
+            <span id="logo-skill" data-aos="zoom-in">
+              <i class="devicon-javascript-plain colored fs-1"></i>
+            </span>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffff"
+          fill-opacity="1"
+          d="M0,224L34.3,224C68.6,224,137,224,206,234.7C274.3,245,343,267,411,250.7C480,235,549,181,617,176C685.7,171,754,213,823,229.3C891.4,245,960,235,1029,240C1097.1,245,1166,267,1234,240C1302.9,213,1371,139,1406,101.3L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- end skill -->
     <!--  contack-->
     <section id="contact">
       <div class="container mb-5 pb-5">
